--- a/CASPER/templates/index.html
+++ b/CASPER/templates/index.html
@@ -13,7 +13,9 @@
         rows="10"
         cols="50"
         placeholder="Enter your Casper code here"
-      ></textarea>
+      >
+{{ code }}</textarea
+      >
       <br /><br />
       <button type="submit">Run</button>
     </form>
