--- a/CASPER/static/index.css
+++ b/CASPER/static/index.css
@@ -11,8 +11,7 @@
 }
 
 body{
-    background: rgb(237,237,237);
-    background: linear-gradient(56deg, rgba(237,237,237,1) 0%, rgba(255,255,255,1) 50%, rgba(237,237,237,1) 100%);
+    background: rgb(252, 252, 252);
 
 }
 
@@ -33,8 +32,9 @@ body{
     max-width: 1500px;
     margin: 0 auto; 
     padding: 10px; 
-    height: 100%;
+    height: 90vh;
     overflow: hidden;
+    
 }
 
 svg{
@@ -48,7 +48,7 @@ svg{
     display: flex;
     gap: 20px;
     padding: 20px; 
-    height: 300px;
+    height: 65%;
 }   
 
 /* border-radius: top-left top-right bottom-right bottom-left; */
@@ -79,89 +79,96 @@ svg{
     background: #ffffff;
 }
 
-.code-div{
+.code-div {
     max-width: 700px;
-    width: 100%;    
-    outline: 0.5px solid rgb(209, 209, 209); 
+    width: 100%;
+    outline: 0.5px solid rgb(209, 209, 209);
     background-color: #f6f6f6;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+
 }
 
-.code-div textarea{
+form {
+    display: flex;
+    flex-direction: column;  
+    width: 100%;             
+    max-width: 800px;        
+    height: 100%;           
+}
+
+.text-area-div{
+    height: 100%; 
+}
+
+.text-area-div textarea {
+    height: 100%;
     font-size: 1rem;
     resize: none;
     padding: 20px;
     width: 100%;
-    height: 450px;
     background: transparent;
     border: none;
     border-radius: 0 0 10px 10px;
-    
+    overflow: auto;
+    white-space: pre-wrap;
 }
+
+
 
 #code-area {
-    font-family: 'Courier New', monospace; /* Use a monospace font for code */
-    font-size: 16px; /* Adjust the font size */
-    font-weight:bolder; /* Adjust the font weight */
-    line-height: 1.5; /* Adjust line height for better readability */
-    color: #333; /* Text color */
+    font-family: 'Courier New', monospace; 
+    font-size: 16px; 
+    font-weight:bolder; 
+    line-height: 1.5; 
+    color: #333; 
 }
-
-
 
 .code-div textarea:focus{
     outline: none;
 }
 
-.lexer-div{
-
+.lexer-div {
     width: 650px;
     outline: 0.5px solid rgb(209, 209, 209);
     border-radius: 10px;
     background-color: #f6f6f6;
-    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
 }
 
-.lexer-header{
+.lexer-header {
     display: grid;
-    
     width: 100%;
     grid-template-columns: 1fr 1fr;
     align-items: center;
     text-align: center;
-    width: 100%;
     background: #ffffff;
     padding: 13px;
-    align-items: center;
     border-radius: 10px 10px 0 0;
-    
 }
 
-.lexer-header label{
-    padding: 5px;
-    background: #ffffff;
-    font-weight: 500;
+.lex-table-container {
+    overflow-y: auto;
+    margin-top: 10px;
 }
-
 
 .lex-table {
-    width: 100%;  
+    width: 100%;
     border-collapse: collapse;
-    table-layout: fixed;  
+    table-layout: fixed;
 }
 
 .lex-table td {
     font-size: 0.85rem;
-    padding: 10px; 
+    padding: 10px;
     text-align: center;
     vertical-align: top;
     background-color: #f6f6f6;
-
+    width: 100%;
 }
 
-.lex-table td{
-    width: 100%;                 
-}
 
 .output-container{
     display: grid;
@@ -188,13 +195,15 @@ svg{
     font-weight: 500;
 }
 
-.output-terminal{
+.output-terminal {
     background: #f6f6f6;
-    height: 150px;
-    padding: 10px;  
+    height: 180px;
+    padding: 10px 10px;  
     border-radius: 0 0 10px 10px;
+    overflow: auto; /* Enables scrolling */
 }
 
 .main-output{
+    margin: 0;
     background: #f6f6f6;
 }
