--- a/CASPER/templates/index.html
+++ b/CASPER/templates/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='index.css') }}"
-    />
+    <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}" /> <!-- CSS file -->
+    <script src="{{ url_for('static', filename='js/index.js') }}" defer></script> <!-- JS file -->
     <title>Casper Compiler</title>
   </head>
   <body>
