--- a/CASPER/static/index.css
+++ b/CASPER/static/index.css
@@ -1,202 +1,210 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap');
+
+
+html {
+  height: 100%;
+}
 
 * {
-    font-family: "Roboto", serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background: rgb(252, 252, 252);
+  font-family: 'Fira Code', monospace;
+  background: #1E1E1E;       
+  color: #CCCCCC;            
+  display: flex;
+  flex-direction: column;
+  height: 100;             
 }
+
 
 .main-header {
-    background-color: #ffffff;
-    width: 100%;
-    outline: 0.5px solid rgb(209, 209, 209);
+  background-color: #2C2C2C;
+  border-bottom: 1px solid #3A3A3A;
+  padding: 10px 50px;
+}
+.main-header h1 {
+  color: #4f46e5; 
+  margin: 0;
 }
 
-.main-header h1 {
-    background-color: #ffffff;
-    padding: 10px 50px;
-    color: #4f46e5;
-}
 
 #main {
-    max-width: 1500px;
-    margin: 0 auto;
-    padding: 10px;
-    height: 90vh;
-    overflow: hidden;
-}
-
-.main-container {
-    justify-content: start;
-    display: flex;
-    gap: 20px;
-    padding: 20px;
-    height: 65%;
-}
-
-.label-container {
-    width: 100%;
-    background: #ffffff;
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    align-items: center;
-    border-radius: 10px 10px 0 0;
-}
-
-.run-button {
-    background: #4f46e5;
-    outline: none;
-    border: none;
-    padding: 10px 30px;
-    color: white;
-    font-weight: 500;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-}
-
-.run-button:hover {
-    background-color: #5c54ec;
-    transform: scale(1.05);
-}
-
-.code-div {
-    max-width: 700px;
-    width: 100%;
-    outline: 0.5px solid rgb(209, 209, 209);
-    background-color: #f6f6f6;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    
-}
-
-.text-area-div {
-    height: 100%;
-    position: relative;
-    max-height: 100%;
-    overflow-y: scroll;
-
-
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
 }
 
 .form-div {
-    height: 87.5%;
-    display: flex;
-    flex-direction: column;
-    min-height: 0;
+    flex: 1;                  
+    display: flex;           
+    flex-direction: column;   
+  }
+  
+
+
+.main-container {
+  display: flex;
+  flex: 1;
+  gap: 20px;
+  margin-bottom: 10px;
 }
+
+
+.code-div {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  background-color: #2C2C2C; 
+  border: 1px solid #3A3A3A;
+  border-radius: 6px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+}
+
+
+.label-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #2C2C2C;
+  border-radius: 6px 6px 0 0;
+  padding: 10px;
+  border-bottom: 1px solid #3A3A3A;
+}
+.label-container svg path {
+  fill: #cccccc; 
+}
+.label-container label {
+  color: #cccccc;
+}
+
+
+.run-button {
+  background: #4f46e5;
+  border: none;
+  padding: 8px 20px;
+  color: #ffffff;
+  font-weight: 500;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+.run-button:hover {
+  background-color: #5c54ec;
+  transform: scale(1.05);
+}
+
+
+.text-area-div {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+
 .editor-container {
-    display: flex;
-    position: relative;
-    height: 100%;
+  flex: 1;
+  display: flex;
+  position: relative;
 }
 
-.line-numbers {
-    width: 40px;
-    text-align: right;
-    padding: 20px;
-    font-size: 1rem;
-    color: #5c54ec;
-    line-height: 1.5;
-    font-size: 16px;
+
+#codeEditor {
+  display: none;
 }
 
-.code-editor {
-    resize: none;
-    height: 100%;
-    font-size: 1rem;
-    resize: none;
-    padding: 20px;
-    width: 100%;
-    background: transparent;
-    border: none;
-    border-radius: 0 0 10px 10px;
-    white-space: pre-wrap;
-    font-family: 'Courier New', monospace;
-    font-size: 16px;
-    font-weight: bold;
-    line-height: 1.5;
-    color: #333;
-    overflow-y: hidden;
-}
-
-.code-editor:focus {
-    outline: none;
-}
 
 .lexer-div {
-    width: 650px;
-    outline: 0.5px solid rgb(209, 209, 209);
-    border-radius: 10px;
-    background-color: #f6f6f6;
+    width: 400px;
     display: flex;
     flex-direction: column;
-}
+    background-color: #2C2C2C;
+    border: 1px solid #3A3A3A;
+    border-radius: 6px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+  
+  
+    max-height: 627px;     
+    overflow-y: auto;    
+  }
+  
 
 .lexer-header {
-    display: grid;
-    width: 100%;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    text-align: center;
-    background: #ffffff;
-    padding: 13px;
-    border-radius: 10px 10px 0 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-align: center;
+  background: #2C2C2C;
+  padding: 10px;
+  border-bottom: 1px solid #3A3A3A;
+  border-radius: 6px 6px 0 0;
+}
+.lexer-header label {
+  color: #cccccc;
 }
 
 .lex-table-container {
-    overflow-y: auto;
-    margin-top: 10px;
+  overflow-y: auto;
+  flex: 1;
+  scrollbar-color: #4f46e5 #2C2C2C;
 }
 
 .lex-table {
-    width: 100%;
-    border-collapse: collapse;
-    table-layout: fixed;
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+}
+.lex-table td {
+  font-size: 0.85rem;
+  padding: 10px;
+  text-align: center;
+  vertical-align: top;
+  border-bottom: 1px solid #3A3A3A;
+  color: #cccccc;
 }
 
-.lex-table td {
-    font-size: 0.85rem;
-    padding: 10px;
-    text-align: center;
-    vertical-align: top;
-    background-color: #f6f6f6;
-    width: 100%;
-}
 
 .output-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    max-width: 1500px;
-    width: 100%;
-    padding: 20px;
-}
-
-.terminal-container {
-    width: 60%;
-    border-radius: 10px;
-    outline: 0.5px solid rgb(209, 209, 209);
+  border: 1px solid #3A3A3A;
+  border-radius: 6px;
+  background-color: #2C2C2C;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
 }
 
 .output-label-container {
-    border-radius: 10px 10px 0 0;
-    padding: 15px;
-    background: #ffffff;
+  background: #2C2C2C;
+  padding: 10px;
+  border-bottom: 1px solid #3A3A3A;
+  border-radius: 6px 6px 0 0;
+}
+.output-label-container label {
+  color: #cccccc;
 }
 
 .output-terminal {
-    background: #f6f6f6;
-    height: 180px;
-    padding: 10px;
-    border-radius: 0 0 10px 10px;
-    overflow: auto;
+  padding: 10px;
+  height: 180px;
+  overflow: auto;
+  color: #cccccc;
+  scrollbar-color: #4f46e5 #2C2C2C;
+}
+
+
+#lineNumbers {
+  display: none;
+}
+
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-track {
+  background: #2C2C2C;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #4f46e5;
+  border-radius: 4px;
 }
