--- a/CASPER/static/index.css
+++ b/CASPER/static/index.css
@@ -33,10 +33,11 @@ body {
 
 
 #main {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 20px; 
+    
 }
 
 .form-div {
@@ -48,10 +49,11 @@ body {
 
 
 .main-container {
-  display: flex;
   flex: 1;
-  gap: 20px;
-  margin-bottom: 10px;
+  display: flex;
+  gap: 20px;      
+  margin-top: 20px; 
+  margin-bottom: 20px;
 }
 
 
@@ -143,7 +145,7 @@ body {
   border-radius: 6px 6px 0 0;
 }
 .lexer-header label {
-  color: #cccccc;
+  color: #4f46e5;
 }
 
 .lex-table-container {
@@ -186,7 +188,7 @@ body {
 
 .output-terminal {
   padding: 10px;
-  height: 180px;
+  height: 130px;
   overflow: auto;
   color: #cccccc;
   scrollbar-color: #4f46e5 #2C2C2C;
