--- a/CASPER/static/index.css
+++ b/CASPER/static/index.css
@@ -17,7 +17,7 @@ body {
   color: #CCCCCC;            
   display: flex;
   flex-direction: column;
-  height: 100;             
+  height: 100;            
 }
 
 
@@ -65,6 +65,7 @@ body {
   border: 1px solid #3A3A3A;
   border-radius: 6px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+  zoom: 120%;
 }
 
 
