--- a/CASPER/static/index.css
+++ b/CASPER/static/index.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap');
 
-
 html {
   height: 100%;
 }
@@ -13,13 +12,12 @@ html {
 
 body {
   font-family: 'Fira Code', monospace;
-  background: #1E1E1E;       
-  color: #CCCCCC;            
+  background: #1E1E1E;
+  color: #CCCCCC;
   display: flex;
   flex-direction: column;
-  height: 100;            
+  height: 100vh;
 }
-
 
 .main-header {
   background-color: #2C2C2C;
@@ -27,47 +25,42 @@ body {
   padding: 10px 50px;
 }
 .main-header h1 {
-  color: #4f46e5; 
+  color: #4f46e5;
   margin: 0;
 }
 
-
 #main {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    padding: 20px; 
-    
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
 }
 
 .form-div {
-    flex: 1;                  
-    display: flex;           
-    flex-direction: column;   
-  }
-  
-
-
-.main-container {
   flex: 1;
   display: flex;
-  gap: 20px;      
-  margin-top: 20px; 
-  margin-bottom: 20px;
+  flex-direction: column;
 }
 
+.main-container {
+
+  flex: 1;
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
 .code-div {
   display: flex;
   flex-direction: column;
   flex: 1;
-  background-color: #2C2C2C; 
+  background-color: #2C2C2C;
   border: 1px solid #3A3A3A;
   border-radius: 6px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
-  zoom: 120%;
+  zoom: 125%;
 }
-
 
 .label-container {
   display: flex;
@@ -79,12 +72,11 @@ body {
   border-bottom: 1px solid #3A3A3A;
 }
 .label-container svg path {
-  fill: #cccccc; 
+  fill: #cccccc;
 }
 .label-container label {
   color: #cccccc;
 }
-
 
 .run-button {
   background: #4f46e5;
@@ -101,13 +93,11 @@ body {
   transform: scale(1.05);
 }
 
-
 .text-area-div {
   flex: 1;
   display: flex;
   flex-direction: column;
 }
-
 
 .editor-container {
   flex: 1;
@@ -115,26 +105,21 @@ body {
   position: relative;
 }
 
-
 #codeEditor {
   display: none;
 }
 
-
 .lexer-div {
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-    background-color: #2C2C2C;
-    border: 1px solid #3A3A3A;
-    border-radius: 6px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
-  
-  
-    max-height: 627px;     
-    overflow-y: auto;    
-  }
-  
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  background-color: #2C2C2C;
+  border: 1px solid #3A3A3A;
+  border-radius: 6px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+  max-height: 662px;
+  overflow-y: auto;
+}
 
 .lexer-header {
   display: grid;
@@ -169,8 +154,8 @@ body {
   color: #cccccc;
 }
 
-
 .output-container {
+  margin-top: auto;
   border: 1px solid #3A3A3A;
   border-radius: 6px;
   background-color: #2C2C2C;
@@ -189,17 +174,15 @@ body {
 
 .output-terminal {
   padding: 10px;
-  height: 130px;
+  height: 200px;
   overflow: auto;
   color: #cccccc;
   scrollbar-color: #4f46e5 #2C2C2C;
 }
 
-
 #lineNumbers {
   display: none;
 }
-
 
 ::-webkit-scrollbar {
   width: 8px;
