--- a/CASPER/static/index.css
+++ b/CASPER/static/index.css
@@ -44,8 +44,8 @@ body {
 
 .main-container {
 
-  flex: 1;
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -54,12 +54,13 @@ body {
 .code-div {
   display: flex;
   flex-direction: column;
-  flex: 1;
+  flex: 1 1 0;
   background-color: #2C2C2C;
   border: 1px solid #3A3A3A;
   border-radius: 6px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
   zoom: 125%;
+  min-width: 300px;
 }
 
 .label-container {
@@ -119,6 +120,8 @@ body {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
   max-height: 662px;
   overflow-y: auto;
+  flex: 0 0 400px;
+  max-width: 100%;
 }
 
 .lexer-header {
@@ -193,4 +196,23 @@ body {
 ::-webkit-scrollbar-thumb {
   background-color: #4f46e5;
   border-radius: 4px;
+}
+
+
+@media (max-width: 900px) {
+  .main-container {
+    flex-direction: column;
+  }
+
+ 
+  .code-div {
+    width: 100%;
+    margin-bottom: 20px; 
+  }
+
+ 
+  .lexer-div {
+    width: 100%;
+    max-height: 300px;
+  }
 }
