--- a/CASPER/static/index.css
+++ b/CASPER/static/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap");
 
 html {
   height: 100%;
@@ -11,17 +11,17 @@ html {
 }
 
 body {
-  font-family: 'Fira Code', monospace;
-  background: #1E1E1E;
-  color: #CCCCCC;
+  font-family: "Fira Code", monospace;
+  background: #1e1e1e;
+  color: #cccccc;
   display: flex;
   flex-direction: column;
   height: 100vh;
 }
 
 .main-header {
-  background-color: #2C2C2C;
-  border-bottom: 1px solid #3A3A3A;
+  background-color: #2c2c2c;
+  border-bottom: 1px solid #3a3a3a;
   padding: 10px 50px;
 }
 .main-header h1 {
@@ -43,9 +43,8 @@ body {
 }
 
 .main-container {
-
   display: flex;
-  flex-wrap: wrap;
+  flex: 1;
   gap: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -55,8 +54,8 @@ body {
   display: flex;
   flex-direction: column;
   flex: 1 1 0;
-  background-color: #2C2C2C;
-  border: 1px solid #3A3A3A;
+  background-color: #2c2c2c;
+  border: 1px solid #3a3a3a;
   border-radius: 6px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
   zoom: 125%;
@@ -67,10 +66,10 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #2C2C2C;
+  background: #2c2c2c;
   border-radius: 6px 6px 0 0;
   padding: 10px;
-  border-bottom: 1px solid #3A3A3A;
+  border-bottom: 1px solid #3a3a3a;
 }
 .label-container svg path {
   fill: #cccccc;
@@ -114,8 +113,8 @@ body {
   width: 400px;
   display: flex;
   flex-direction: column;
-  background-color: #2C2C2C;
-  border: 1px solid #3A3A3A;
+  background-color: #2c2c2c;
+  border: 1px solid #3a3a3a;
   border-radius: 6px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
   max-height: 662px;
@@ -128,9 +127,9 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   text-align: center;
-  background: #2C2C2C;
+  background: #2c2c2c;
   padding: 10px;
-  border-bottom: 1px solid #3A3A3A;
+  border-bottom: 1px solid #3a3a3a;
   border-radius: 6px 6px 0 0;
 }
 .lexer-header label {
@@ -140,7 +139,7 @@ body {
 .lex-table-container {
   overflow-y: auto;
   flex: 1;
-  scrollbar-color: #4f46e5 #2C2C2C;
+  scrollbar-color: #4f46e5 #2c2c2c;
 }
 
 .lex-table {
@@ -153,22 +152,22 @@ body {
   padding: 10px;
   text-align: center;
   vertical-align: top;
-  border-bottom: 1px solid #3A3A3A;
+  border-bottom: 1px solid #3a3a3a;
   color: #cccccc;
 }
 
 .output-container {
   margin-top: auto;
-  border: 1px solid #3A3A3A;
+  border: 1px solid #3a3a3a;
   border-radius: 6px;
-  background-color: #2C2C2C;
+  background-color: #2c2c2c;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
 }
 
 .output-label-container {
-  background: #2C2C2C;
+  background: #2c2c2c;
   padding: 10px;
-  border-bottom: 1px solid #3A3A3A;
+  border-bottom: 1px solid #3a3a3a;
   border-radius: 6px 6px 0 0;
 }
 .output-label-container label {
@@ -180,7 +179,7 @@ body {
   height: 200px;
   overflow: auto;
   color: #cccccc;
-  scrollbar-color: #4f46e5 #2C2C2C;
+  scrollbar-color: #4f46e5 #2c2c2c;
 }
 
 #lineNumbers {
@@ -191,26 +190,23 @@ body {
   width: 8px;
 }
 ::-webkit-scrollbar-track {
-  background: #2C2C2C;
+  background: #2c2c2c;
 }
 ::-webkit-scrollbar-thumb {
   background-color: #4f46e5;
   border-radius: 4px;
 }
 
-
 @media (max-width: 900px) {
   .main-container {
     flex-direction: column;
   }
 
- 
   .code-div {
     width: 100%;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
   }
 
- 
   .lexer-div {
     width: 100%;
     max-height: 300px;
